[BACKLOG-28928] - Update login screen for Pentaho User Console Correct text alignment property

--- a/widgets/src/main/resources/org/pentaho/gwt/widgets/themes/public/themes/ruby/globalRuby.css
+++ b/widgets/src/main/resources/org/pentaho/gwt/widgets/themes/public/themes/ruby/globalRuby.css
@@ -5292,7 +5292,6 @@ span.gwt-RadioButton label {
 #evaluationPanel .login-value {
   font-size: 14px;
   color: #414141;
-  text-align: center;
   letter-spacing: 0.02em;
   line-height: 20px;
   font-weight: 400;
